frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: brendanburns/journal-server:latest
          imagePullPolicy: IfNotPresent
          name: frontend
          volumeMounts:
            - mountPath: "/etc/redis-passwd"
              name: passwd-volume
              readOnly: true
          resources:
            requests:
              cpu: "1.0"
              memory: "1G"
            limits:
              cpu: "1.0"
              memory: "1G"
      volumes:
        - name: passwd-volume
          secret:
            secretName: redis-passwd
